[package]
name = "code-flows"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
env_logger = "0.10"
log = "0.4"
reqwest = {version = "0.11", features = ["json", "multipart"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.0", features = ["full"]}
wasmedge-sdk = {version = "0.7.1", features = ["async"]}
